# assist

./: .gitignore  Readme.md  main.py  pyproject.toml  queue.py  requirements.txt  tasks.py
scratch/: kindle.py
tasks/: __init__.py  demo.py  kindle.py
util/: runner.py  task.py
