[project]
name = "assist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles==23.1.0",
    "apscheduler==3.10.1",
    "asgiref==3.6.0",
    "blinker==1.5",
    "click==8.1.3",
    "croniter==1.3.14",
    "exceptiongroup==1.1.2",
    "h11==0.14.0",
    "h2==4.1.0",
    "hpack==4.0.0",
    "hypercorn==0.14.3",
    "hyperframe==6.0.1",
    "importlib-metadata==6.6.0",
    "iniconfig==2.0.0",
    "itsdangerous==2.1.2",
    "jinja2==3.1.2",
    "loguru==0.7.0",
    "markupsafe==2.1.2",
    "packaging==23.1",
    "pluggy==1.2.0",
    "priority==2.0.0",
    "pydantic==1.10.7",
    "pytest==7.4.0",
    "python-dateutil==2.8.2",
    "pytz==2023.3",
    "quart==0.18.4",
    "setuptools==75.2.0",
    "six==1.16.0",
    "toml==0.10.2",
    "tomli==2.0.1",
    "typing-extensions==4.5.0",
    "tzlocal==5.0.1",
    "uvicorn==0.22.0",
    "werkzeug==2.3.4",
    "wsproto==1.2.0",
    "zipp==3.15.0",
]
